--- a/240118/style.css
+++ b/240118/style.css
@@ -63,3 +63,57 @@
   display: flex;
   justify-content: space-around;
 }
+#top_gnb {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: #b42111;
+  height: 35px;
+}
+#top_gnb a {
+  color: #fff;
+  /* line-height: 35px; */
+}
+/* 요새는 잘 안쓰지만 테이블로 짤 수 있다! */
+#bottom_gnb {
+  display: table;
+  width: 100%;
+  border-bottom: 1px solid #000;
+}
+#bottom_gnb > div {
+  display: table-cell;
+}
+#bottom_gnb > div > a {
+  /* 블락을 주어서 밑에 요소들이 다 적용되게 만듦 */
+  display: block;
+  height: 35px;
+  line-height: 35px;
+  text-align: center;
+  color: #b42111;
+  position: relative;
+}
+/* 전후문자 선택자 사용해서 bar 넣기 / 꼭 content가 존재해야함 /부모 요소인 a 태그의 inline 속성을 그대로 가져오기 때문에 display block을 주어야함  */
+#bottom_gnb > div > a::before {
+  content: "";
+  position: absolute;
+  top: 9px;
+  left: -1px;
+  width: 1px;
+  height: 15px;
+  display: block;
+  border-left: 1px solid #000;
+}
+/* section */
+#section_header {
+  padding: 20px 0 0 20px;
+}
+#section_article {
+  padding: 20px;
+}
+/* footer */
+#main_footer {
+  border-top: 3px solid #000;
+  padding: 20px;
+  background: #b42111;
+  color: #fff;
+}
