--- a/240126/flex_project01/style01.css
+++ b/240126/flex_project01/style01.css
@@ -1,6 +1,17 @@
 /* ========== mobile =========== */
 /* common */
-@import url("./reset.css");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
 #wrap {
   display: flex;
   flex-flow: column nowrap;
@@ -52,6 +63,10 @@
 .nav {
   order: 2;
   width: 100%;
+  display: none;
+}
+.nav.active {
+  display: block;
 }
 .gnb li {
   display: flex;
@@ -184,7 +199,7 @@ span .next_btn {
 .rankup_section {
   order: 7;
   padding: 40px 12.5%;
-  padding: 0.2.5rem 12.5%;
+  padding: 2.5rem 12.5%;
   background: #219af7;
   text-shadow: 0 1px 1px #1974ba;
 }
@@ -194,7 +209,6 @@ span .next_btn {
   justify-content: space-between;
 }
 .rankup_list li {
-  width: 115px;
   width: 47.916%;
   text-align: center;
   margin-top: 15px;
@@ -223,6 +237,7 @@ span .next_btn {
   display: block;
   padding: 30px 0;
   padding: 1.875rem 0;
+  text-align: center;
 }
 .banner_box_02 {
   background: #c44968;
@@ -266,138 +281,138 @@ footer p {
     width: 90%;
     margin: 0 auto;
   }
-}
-/* header */
-.header {
-  flex-direction: row;
-}
-.logo {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  width: 120px;
-  width: 15.625rem;
-  padding: 0;
-}
-.logo a {
-  display: block;
-  padding: 50px 0;
-  padding: 3.125rem 0;
-}
-.nav {
-  position: relative;
-  min-height: 80px;
-  min-height: 5rem;
-  background: #2ecc71;
-}
-.gnb {
-  display: none;
-  /* position: relative;
+
+  /* header */
+  .header {
+    flex-direction: row;
+  }
+  .logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 15.625%;
+    padding: 0;
+  }
+  .logo a {
+    display: block;
+    padding: 50px 0;
+    padding: 3.125rem 0;
+  }
+  .nav {
+    position: relative;
+    min-height: 80px;
+    min-height: 5rem;
+    background: #2ecc71;
+  }
+  .gnb {
+    display: none;
+    /* position: relative;
   top: 100%;
   right: 0px;
   z-index: 20;
   width: 308px;
   width: 40.1%; */
-}
-.menu_toggle_btn {
-  top: 20%;
-  right: 30px;
-  right: 1.875rem;
-  z-index: 20;
-  margin-top: 15px;
-  margin-top: 0.9375rem;
-}
-/* slider */
-.slider_section {
-  width: 59.9%;
-  height: auto;
-}
-.slider_section span {
-  position: relative;
-  z-index: 10;
-}
-/* latest */
-.latest_post_section {
-  order: 5;
-}
-.popular_post_section {
-  order: 6;
-}
-.latest_post_section,
-.popular_post_section {
-  width: 41.6%;
-  padding: 5.208%;
-}
-.gallery_section {
-  order: 8;
-  width: 71.3%;
-  padding: 5.208%;
-}
-.gallery_list {
-  display: flex;
-}
-.gallery_list li {
-  width: 47%;
-}
-.gallery_list li:nth-child(2) {
-  margin-left: 5.98%;
-  margin-top: 0;
-}
-.rankup_section {
-  order: 4;
-  width: 39.5%;
-  padding-left: 5.2083%;
-  padding-riht: 5.2083%;
-}
-/* banner */
-.banner_section {
-  display: flex;
-  flex-direction: column;
-  order: 9;
-  width: 28.64%;
-}
-.banner_section div {
-  flex: 1;
-}
-.banner_box_01 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.banner_box_01 a {
-  display: inline;
-  padding: 0;
-}
-.banner_box_02 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.banner_list {
-  padding: 0;
-  justify-content: flex-start;
-}
-/* social */
-.social_section {
-  display: flex;
-  order: 7;
-  justify-content: center;
-  align-items: center;
-  width: 16.6%;
-  padding: 0;
-}
-.social_list {
-  flex-direction: column;
-  justify-content: flex-start;
-}
-.social_list li:nth-child(2) {
-  margin: 24px 0;
-  margin: 1.5rem 0;
-}
-/* footer */
-.footer {
-  padding: 2.5rem 0;
+  }
+  .menu_toggle_btn {
+    top: 20%;
+    right: 30px;
+    right: 1.875rem;
+    z-index: 20;
+    margin-top: 15px;
+    margin-top: 0.9375rem;
+  }
+  /* slider */
+  .slider_section {
+    width: 59.9%;
+    height: auto;
+  }
+  .slider_section span {
+    position: relative;
+    z-index: 10;
+  }
+  /* latest */
+  .latest_post_section {
+    order: 5;
+  }
+  .popular_post_section {
+    order: 6;
+  }
+  .latest_post_section,
+  .popular_post_section {
+    width: 41.6%;
+    padding: 5.208%;
+  }
+  .gallery_section {
+    order: 8;
+    width: 71.3%;
+    padding: 5.208%;
+  }
+  .gallery_list {
+    display: flex;
+  }
+  .gallery_list li {
+    width: 47%;
+  }
+  .gallery_list li:nth-child(2) {
+    margin-left: 5.98%;
+    margin-top: 0;
+  }
+  .rankup_section {
+    order: 4;
+    width: 40.2%;
+    padding-left: 5.2083%;
+    padding-right: 5.2083%;
+  }
+  /* banner */
+  .banner_section {
+    display: flex;
+    flex-direction: column;
+    order: 9;
+    width: 28.64%;
+  }
+  .banner_section div {
+    flex: 1;
+  }
+  .banner_box_01 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .banner_box_01 a {
+    display: inline;
+    padding: 0;
+  }
+  .banner_box_02 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .banner_list {
+    padding: 0;
+    justify-content: flex-start;
+  }
+  /* social */
+  .social_section {
+    display: flex;
+    order: 7;
+    justify-content: center;
+    align-items: center;
+    width: 16.6%;
+    padding: 0;
+  }
+  .social_list {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .social_list li:nth-child(2) {
+    margin: 24px 0;
+    margin: 1.5rem 0;
+  }
+  /* footer */
+  .footer {
+    padding: 2.5rem 0;
+  }
 }
 /* ========= desktop ========== */
 @media screen and (min-width: 960px) {
