--- a/240123/Project.css
+++ b/240123/Project.css
@@ -37,6 +37,9 @@ nav {
 #bodytop ul li a {
   color: gray;
 }
+#bodymiddle img {
+  width: 490px;
+}
 #bodymiddle {
   padding-top: 10px;
   display: flex;
@@ -48,7 +51,7 @@ nav {
   text-align: center;
   top: 70%;
   font-size: 20px;
-  color: #fff;
+  color: #000;
 }
 h3 {
   margin-bottom: 15px;
@@ -62,3 +65,59 @@ h3 {
   margin: 0 auto;
   padding-left: 10px;
 }
+#menu-top {
+
+  display: flex;
+  justify-content:space-between;
+  width: 490px;
+  margin: 0 auto;
+  align-items: center;
+  position: relative;
+
+}
+#menu-top div p {
+  margin-top: 50px;
+  display: flex;
+  justify-content:center;
+}
+#menu-top div p::before {
+  content: "";
+  width: 50px;
+  height: 50px;
+  background: grey;
+  border-radius:10px;
+  position: absolute;
+  top: 10px;
+}
+#menu-top div h4 {
+  padding-top: 20px;
+}
+#menu-bottom {
+  
+
+  display: flex;
+  justify-content:space-between;
+  width: 490px;
+  margin: 0 auto;
+  align-items: center;
+  position: relative;
+
+}
+#menu-bottom div p {
+  margin-top: 50px;
+  display: flex;
+  justify-content:center;
+}
+#menu-bottom div p::before {
+  content: "";
+  width: 50px;
+  height: 50px;
+  background:grey;
+  border-radius:10px;
+  position: absolute;
+  top: 10px;
+}
+#menu-bottom div h4 {
+  padding-top: 20px;
+}
+
