--- a/Project/style.scss
+++ b/Project/style.scss
@@ -1,49 +1,83 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;800&display=swap");
 * {
-    margin: 0;
-padding: 0;
-box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-li {list-style: none;}
-a {text-decoration: none;
-color: inherit;}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
 
 .wrap {
-  
+  width: 100%;
+  height: 100%;
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: "";
+    background: url("./img/backg.png") center/cover no-repeat;
     width: 100%;
-    height: 100%;
-    position: relative;
-    
-    &::before {
-        position: absolute;
-        content: "";
-        background: url("./img/background.jpg") center/cover no-repeat;
-        width: 100%;
-        height: 100vh;
-        opacity: 0.3;
-        top: 0;
-        left: 0;
+    height: 100vh;
+    opacity: 0.3;
+    top: 0;
+    left: 0;
+    transform: translateY(-2%);
     z-index: -1;
-    }
+  }
 }
-header{
-    width: 100%;
-    height: 80px;
-  
-    .logo {
-        display: flex;
-        justify-content: space-between;
-        height: 100px;
-        align-items: center;
+.head {
+  margin: 0 0 0 20px;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .logo {
+    display: flex;
+    width: 350px;
+    height: 100%;
+    justify-content: space-between;
+    align-items: center;
+    img {
+      width: 80px;
     }
-         img {
-           display: block;
-         
-            width: 80px;
-         
-        }
+    h1 {
+      font-size: 50px;
+    }
+  }
+  .gnb {
+    position: relative;
+    a {
+      font-size: 1.5em;
+      margin: 0 50px 0 0;
+      &::before {
+        content: "";
+        width: 80px;
+        height: 2px;
+        background: palevioletred;
+        position: absolute;
+        bottom: -10px;
+        opacity: 1;
+      }
+      &:hover {
+        color: palevioletred;
+      }
+    }
+  }
 }
-
-
- 
-
+.name {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  span {
+    font-size: 100px;
+  }
+}
