--- a/240203/style.css
+++ b/240203/style.css
@@ -18,20 +18,10 @@ a {
   width: 100%;
   height: 100%;
   position: relative;
-}
-#wrap::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url("./img/backg.png") center/cover no-repeat;
-  opacity: 0.3;
-  z-index: -99;
+  background: url("../240206/bg_main.jpg");
 }
 #wrap header {
-  padding-top: 20px;
+  padding-top: 50px;
   width: 100%;
   height: 80px;
   display: flex;
@@ -46,9 +36,6 @@ a {
   align-items: center;
   width: 300px;
   height: auto;
-}
-#wrap header h1 img {
-  width: 70px;
 }
 #wrap header h1 a {
   font-size: 45px;
@@ -70,16 +57,17 @@ a {
 }
 #wrap .container {
   width: 100%;
-  height: 680px;
+  height: 860px;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 #wrap .container .content {
-  width: 100%;
+  width: 1900px;
   height: 400px;
   margin: 8%;
   display: flex;
-  justify-content: right;
+  justify-content: center;
 }
 #wrap .container .content .name {
   width: 30%;
@@ -103,7 +91,7 @@ a {
   cursor: pointer;
 }
 #wrap .container .content .slide {
-  width: 800px;
+  width: 100%;
   margin-right: 22px;
 }
 #wrap .container .content .slide ul {
