--- a/240203/style.scss
+++ b/240203/style.scss
@@ -6,19 +6,20 @@
   width: 100%;
   height: 100%;
   position: relative;
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url("./img/backg.png") center/cover no-repeat;
-    opacity: 0.3;
-    z-index: -99;
-  }
+  background: url("../240206/bg_main.jpg");
+  // &::before {
+  //   content: "";
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   background: url("./img/backg.png") center/cover no-repeat;
+  //   opacity: 0.3;
+  //   z-index: -99;
+  // }
   header {
-    padding-top: 20px;
+    padding-top: 50px;
     width: 100%;
     height: 80px;
     display: flex;
@@ -32,9 +33,7 @@
       align-items: center;
       width: 300px;
       height: auto;
-      img {
-        width: 70px;
-      }
+
       a {
         font-size: map-get($font-size, medium-heading);
         font-family: map-get($font-family, main);
@@ -58,17 +57,20 @@
       }
     }
   }
+
   .container {
     width: 100%;
-    height: 680px;
+    height: 860px;
     display: flex;
     align-items: center;
+    justify-content: center;
+
     .content {
-      width: 100%;
+      width: 1900px;
       height: 400px;
       margin: 8%;
       display: flex;
-      justify-content: right;
+      justify-content: center;
       .name {
         width: 30%;
         height: 100%;
@@ -91,7 +93,7 @@
         }
       }
       .slide {
-        width: 800px;
+        width: 100%;
         margin-right: 22px;
         ul {
           display: flex;
