--- a/240203/variable.scss
+++ b/240203/variable.scss
@@ -1,5 +1,5 @@
 $font-family: (
-  main: "Gowun Dodum",
+  main: "BRBA_B",
 );
 $font-color: (
   primary: #bfc9d5,
@@ -10,5 +10,5 @@ $font-color: (
 $font-size: (
   large-heading: 60px,
   medium-heading: 45px,
-  small-heading: 20px,
+  small-heading: 35px,
 );
