--- a/240203/style.css
+++ b/240203/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -14,36 +13,57 @@ a {
   color: inherit;
 }
 
+@font-face {
+  font-family: "BRBA_B";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.2/BRBA_B.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 #wrap {
   width: 100%;
   height: 100%;
   position: relative;
-  background: url("../240206/bg_main.jpg");
+  background: url("./img/bg_main.jpg");
+  z-index: -1;
 }
-#wrap header {
-  padding-top: 50px;
+
+header {
   width: 100%;
-  height: 80px;
+  height: 120px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 55%;
 }
-#wrap header h1 {
+header h1 {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 300px;
   height: auto;
 }
-#wrap header h1 a {
+header h1 span {
+  display: inline-block;
+  margin-left: 10px;
+  padding-bottom: 5px;
+}
+header h1 span i {
+  color: #d35583;
+  font-size: 50px;
+  text-align: center;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+}
+header h1 a {
+  color: #222;
   font-size: 45px;
-  font-family: "Gowun Dodum";
+  font-family: "BRBA_B";
   font-weight: bold;
   display: block;
 }
-#wrap header .btn {
+header .btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -51,50 +71,99 @@ a {
   gap: 30px;
   position: relative;
 }
-#wrap header .btn a span {
-  font-family: "Gowun Dodum";
-  font-size: 20px;
+header .btn a span {
+  color: #222;
+  font-family: "BRBA_B";
+  font-size: 35px;
+  font-weight: 100;
 }
-#wrap .container {
+
+.container {
   width: 100%;
-  height: 860px;
+  height: 800px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-#wrap .container .content {
-  width: 1900px;
-  height: 400px;
-  margin: 8%;
+.container .frame {
   display: flex;
+  align-items: center;
+  justify-content: right;
+  height: 80%;
+  width: 80%;
+  margin: 0 20%;
+  position: relative;
+  border: 10px solid #d35583;
+  box-shadow: 0 0 10px #a92f51;
+  border-radius: 200px;
+}
+.container .frame::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url("./img/pen.jpg") center/cover;
+  opacity: 0.8;
+  z-index: -5;
+  border-radius: 190px;
+}
+.container .frame .content {
+  display: flex;
+  float: left;
+  width: 1200px;
+  height: 420px;
+  padding-right: 70px;
   justify-content: center;
 }
-#wrap .container .content .name {
+.container .frame .content .name {
   width: 30%;
   height: 100%;
-  padding-right: 20px;
+  padding-right: 30px;
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
   align-items: end;
   gap: 12%;
 }
-#wrap .container .content .name span {
+.container .frame .content .name span {
+  color: #222;
   font-size: 60px;
-  font-family: "Gowun Dodum";
+  font-family: "BRBA_B";
   font-weight: 900;
   font-style: italic;
-  transition: all 0.3s;
-}
-#wrap .container .content .name span:hover {
-  color: #fff;
   cursor: pointer;
+  transition: all 0.3s;
+  opacity: 0;
+  animation: name 1s linear;
+  animation-fill-mode: both;
 }
-#wrap .container .content .slide {
+.container .frame .content .name span:hover {
+  color: #fff;
+}
+.container .frame .content .name span:nth-child(1) {
+  animation-delay: 0.2s;
+}
+.container .frame .content .name span:nth-child(2) {
+  animation-delay: 0.5s;
+}
+.container .frame .content .name span:nth-child(3) {
+  animation-delay: 0.8s;
+}
+@keyframes name {
+  0% {
+    opacity: 0;
+    transform: translate(-100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+}
+.container .frame .content .slide {
   width: 100%;
   margin-right: 22px;
 }
-#wrap .container .content .slide ul {
+.container .frame .content .slide ul {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -102,13 +171,19 @@ a {
   height: 130px;
   gap: 8px;
 }
-#wrap .container .content .slide ul li {
+.container .frame .content .slide ul li {
   width: 100%;
   height: 100%;
+}
+.container .frame .content .slide ul li a {
+  border: 1px solid red;
   position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
-#wrap .container .content .slide ul li a::before {
+.container .frame .content .slide ul li a::before {
   content: "";
   width: 100%;
   height: 100%;
@@ -118,29 +193,27 @@ a {
   border-radius: 30px;
   background: #817984;
   opacity: 0;
-  z-index: 100;
-  transition: opacity 0.3s;
-}
-#wrap .container .content .slide ul li a h1 {
-  position: absolute;
-  font-family: "Gowun Dodum";
-  font-size: 45px;
-  color: #fff;
-  left: 50%;
-  top: -50%;
-  transform: translateX(-50%);
-  z-index: 200;
-  opacity: 0;
   transition: all 0.3s;
 }
-#wrap .container .content .slide ul li a:hover h1 {
-  transform: translate(-50%, 150%);
+.container .frame .content .slide ul li a:hover::before {
+  opacity: 0.6;
+}
+.container .frame .content .slide ul li a h1 {
+  position: absolute;
+  left: 50%;
+  top: 150%;
+  transform: translate(-50%, -50%);
+  font-family: "BRBA_B";
+  font-size: 45px;
+  font-weight: 100;
+  color: #fff;
   opacity: 1;
 }
-#wrap .container .content .slide ul li a:hover::before {
-  opacity: 0.7;
+.container .frame .content .slide ul li a:hover h1 {
+  opacity: 1;
+  top: -100%;
 }
-#wrap .container .content .slide ul li a img {
+.container .frame .content .slide ul li a img {
   width: 100%;
   height: 128px;
   border-radius: 30px;
