--- a/240203/style.scss
+++ b/240203/style.scss
@@ -1,95 +1,154 @@
 @import "reset";
 @import "variable";
-@import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
+@font-face {
+  font-family: "BRBA_B";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.2/BRBA_B.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 
 #wrap {
   width: 100%;
   height: 100%;
   position: relative;
-  background: url("../240206/bg_main.jpg");
-  // &::before {
-  //   content: "";
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   height: 100%;
-  //   background: url("./img/backg.png") center/cover no-repeat;
-  //   opacity: 0.3;
-  //   z-index: -99;
-  // }
-  header {
-    padding-top: 50px;
-    width: 100%;
-    height: 80px;
+  background: url("./img/bg_main.jpg");
+  z-index: -1;
+}
+
+header {
+  width: 100%;
+  height: 120px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 55%;
+  h1 {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 55%;
-    h1 {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 300px;
-      height: auto;
+    width: 300px;
+    height: auto;
 
-      a {
-        font-size: map-get($font-size, medium-heading);
-        font-family: map-get($font-family, main);
-        font-weight: bold;
+    span {
+      display: inline-block;
+      margin-left: 10px;
+      padding-bottom: 5px;
 
-        display: block;
+      i {
+        color: #d35583;
+        font-size: 50px;
+        text-align: center;
+        display: inline-block;
+        width: 50px;
+        height: 50px;
       }
     }
-    .btn {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100%;
-      gap: 30px;
-      position: relative;
-      a {
-        span {
-          font-family: map-get($font-family, main);
-          font-size: map-get($font-size, small-heading);
-        }
+
+    a {
+      color: #222;
+      font-size: map-get($font-size, medium-heading);
+      font-family: map-get($font-family, main);
+      font-weight: bold;
+
+      display: block;
+    }
+  }
+  .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    gap: 30px;
+    position: relative;
+    a {
+      span {
+        color: #222;
+        font-family: map-get($font-family, main);
+        font-size: map-get($font-size, small-heading);
+        font-weight: 100;
       }
     }
   }
+}
 
-  .container {
-    width: 100%;
-    height: 860px;
+.container {
+  width: 100%;
+  height: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .frame {
     display: flex;
     align-items: center;
-    justify-content: center;
-
+    justify-content: right;
+    height: 80%;
+    width: 80%;
+    margin: 0 20%;
+    position: relative;
+    border: 10px solid #d35583;
+    box-shadow: 0 0 10px #a92f51;
+    border-radius: 200px;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: url("./img/pen.jpg") center/cover;
+      opacity: 0.8;
+      z-index: -5;
+      border-radius: 190px;
+    }
     .content {
-      width: 1900px;
-      height: 400px;
-      margin: 8%;
       display: flex;
+      float: left;
+      width: 1200px;
+      height: 420px;
+      padding-right: 70px;
       justify-content: center;
       .name {
         width: 30%;
         height: 100%;
-        padding-right: 20px;
+        padding-right: 30px;
         display: flex;
         flex-flow: column wrap;
         justify-content: center;
         align-items: end;
         gap: 12%;
         span {
+          color: #222;
           font-size: map-get($font-size, large-heading);
           font-family: map-get($font-family, main);
           font-weight: 900;
           font-style: italic;
+          cursor: pointer;
           transition: all 0.3s;
+          opacity: 0;
+          animation: name 1s linear;
+          animation-fill-mode: both;
           &:hover {
             color: #fff;
-            cursor: pointer;
           }
+          &:nth-child(1) {
+            animation-delay: 0.2s;
+          }
+          &:nth-child(2) {
+            animation-delay: 0.5s;
+          }
+          &:nth-child(3) {
+            animation-delay: 0.8s;
+          }
+        }
+      }
+      @keyframes name {
+        0% {
+          opacity: 0;
+          transform: translate(-100px);
+        }
+        100% {
+          opacity: 1;
+          transform: translateX(0%);
         }
       }
       .slide {
@@ -105,10 +164,13 @@
           li {
             width: 100%;
             height: 100%;
-            position: relative;
-            overflow: hidden;
-
             a {
+              border: 1px solid red;
+              position: relative;
+              display: block;
+              width: 100%;
+              height: 100%;
+              overflow: hidden;
               &::before {
                 content: "";
                 width: 100%;
@@ -119,27 +181,25 @@
                 border-radius: 30px;
                 background: map-get($font-color, secondary-dark);
                 opacity: 0;
-                z-index: 100;
-                transition: opacity 0.3s;
+                transition: all 0.3s;
+              }
+              &:hover::before {
+                opacity: 0.6;
               }
               h1 {
                 position: absolute;
+                left: 50%;
+                top: 150%;
+                transform: translate(-50%, -50%);
                 font-family: map-get($font-family, main);
                 font-size: map-get($font-size, medium-heading);
+                font-weight: 100;
                 color: #fff;
-                left: 50%;
-                top: -50%;
-                transform: translateX(-50%);
-                z-index: 200;
-                opacity: 0;
-                transition: all 0.3s;
-              }
-              &:hover h1 {
-                transform: translate(-50%, 150%);
                 opacity: 1;
               }
-              &:hover::before {
-                opacity: 0.7;
+              &:hover h1 {
+                opacity: 1;
+                top: -100%;
               }
               img {
                 width: 100%;
