--- a/240206/style05.css
+++ b/240206/style05.css
@@ -1,76 +1,99 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  background: rgb(199, 193, 193);
+  font-family: "Raleway", sans-serif;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   height: 100vh;
+  color: #222;
+  font-weight: 300;
+  line-height: 1.5rem;
 }
-.wrap {
-  border: 1px solid red;
-  width: 500px;
-  height: 800px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.tab-inner {
+  width: 800px;
+  height: 500px;
+}
+.tab-inner input[name="tap"] {
+  display: none;
+}
+.tab-inner h1 {
+  text-align: center;
+  font: normal 40px/1.5rem "Raleway";
+}
+.tabs {
+  width: 800px;
+  height: 400px;
+  overflow: hidden;
   position: relative;
+}
+.items {
+  width: 2400px;
+  height: 400px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all 0.5s;
   overflow: hidden;
 }
-.section01 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.section02 {
-  position: absolute;
-  top: 50%;
-  left: 150%;
-  transform: translateY(-50%);
-}
-.section03 {
-  position: absolute;
-  top: 50%;
-  left: 250%;
-  transform: translateY(-50%);
-}
-
-.content {
+.items div {
+  float: left;
+  width: 800px;
+  height: 400px;
   text-align: center;
-  width: 100%;
+  padding: 50px;
 }
-.content img {
-  margin: 20px 0;
+.items div img {
+  width: 100px;
   border-radius: 100%;
 }
-.content p {
+.items div p b {
+  display: block;
+}
+.items div p span {
+  color: orange;
+}
+.btn {
+  text-align: center;
+}
+.btn label {
   display: inline-block;
-  padding-bottom: 20px;
+  width: 10px;
+  height: 10px;
+  background: lightgray;
+  cursor: pointer;
 }
-.content span span {
-  color: rgb(184, 135, 43);
+input[id="tap1"]:checked ~ .tabs .items {
+  left: 0;
 }
-
-.buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
+input[id="tap2"]:checked ~ .tabs .items {
+  left: -800px;
 }
-.buttons span {
-  margin: 5px;
-  display: inline-block;
-  width: 15px;
-  height: 15px;
-  border-radius: 15px;
-  background: gray;
+input[id="tap3"]:checked ~ .tabs .items {
+  left: -1600px;
 }
-.buttons .sect02:hover .section02 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+input[id="tap1"]:checked ~ .btn label[fot="tap1"] {
+  border-radius: 100%;
+  background: crimson;
+}
+input[id="tap1"]:checked ~ .btn label[fot="tap1"] {
+  border-radius: 100%;
+  background: crimson;
+}
+input[id="tap1"]:checked ~ .btn label[for="tap1"] {
+  border-radius: 100%;
+  background: crimson;
+}
+input[id="tap2"]:checked ~ .btn label[for="tap2"] {
+  border-radius: 100%;
+  background: crimson;
+}
+input[id="tap3"]:checked ~ .btn label[for="tap3"] {
+  border-radius: 100%;
+  background: crimson;
 }
