--- a/240203/style.scss
+++ b/240203/style.scss
@@ -11,19 +11,19 @@
 #wrap {
   width: 100%;
   height: 100%;
-  position: relative;
   background: url("./img/bg_main.jpg");
-  z-index: -1;
 }
 
 header {
-  width: 100%;
-  height: 120px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  padding-top: 50px;
+  width: 100%;
+  height: 100px;
   gap: 55%;
+
   h1 {
     display: flex;
     justify-content: center;
@@ -33,7 +33,6 @@ header {
 
     span {
       display: inline-block;
-      margin-left: 10px;
       padding-bottom: 5px;
 
       i {
@@ -51,7 +50,6 @@ header {
       font-size: map-get($font-size, medium-heading);
       font-family: map-get($font-family, main);
       font-weight: bold;
-
       display: block;
     }
   }
@@ -66,7 +64,7 @@ header {
       span {
         color: #222;
         font-family: map-get($font-family, main);
-        font-size: map-get($font-size, small-heading);
+        font-size: 30px;
         font-weight: 100;
       }
     }
@@ -75,7 +73,7 @@ header {
 
 .container {
   width: 100%;
-  height: 800px;
+  height: 960px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -83,7 +81,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: right;
-    height: 80%;
+    height: 60%;
     width: 80%;
     margin: 0 20%;
     position: relative;
@@ -97,7 +95,6 @@ header {
       height: 100%;
       background: url("./img/pen.jpg") center/cover;
       opacity: 0.8;
-      z-index: -5;
       border-radius: 190px;
     }
     .content {
@@ -125,19 +122,19 @@ header {
           cursor: pointer;
           transition: all 0.3s;
           opacity: 0;
-          animation: name 1s linear;
+          animation: name 1.5s linear;
           animation-fill-mode: both;
           &:hover {
             color: #fff;
           }
           &:nth-child(1) {
-            animation-delay: 0.2s;
+            animation-delay: 0.1s;
           }
           &:nth-child(2) {
             animation-delay: 0.5s;
           }
           &:nth-child(3) {
-            animation-delay: 0.8s;
+            animation-delay: 0.9s;
           }
         }
       }
@@ -165,14 +162,13 @@ header {
             width: 100%;
             height: 100%;
             a {
-              border: 1px solid red;
-              position: relative;
               display: block;
               width: 100%;
               height: 100%;
+              position: relative;
               overflow: hidden;
               &::before {
-                content: "";
+                content: "1";
                 width: 100%;
                 height: 100%;
                 position: absolute;
@@ -195,11 +191,12 @@ header {
                 font-size: map-get($font-size, medium-heading);
                 font-weight: 100;
                 color: #fff;
-                opacity: 1;
+                opacity: 0;
+                transition: all 0.3s;
               }
               &:hover h1 {
+                top: 50%;
                 opacity: 1;
-                top: -100%;
               }
               img {
                 width: 100%;
