--- a/240203/variable.scss
+++ b/240203/variable.scss
@@ -1,5 +1,6 @@
 $font-family: (
-  main: "BRBA_B",
+  main: "Roboto_head",
+  sub: "Roboto",
 );
 $font-color: (
   primary: #bfc9d5,
@@ -10,5 +11,5 @@ $font-color: (
 $font-size: (
   large-heading: 60px,
   medium-heading: 45px,
-  small-heading: 35px,
+  small-heading: 25px,
 );
