--- a/240203/style.css
+++ b/240203/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;500&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -13,16 +15,15 @@ a {
   color: inherit;
 }
 
-@font-face {
-  font-family: "BRBA_B";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.2/BRBA_B.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
+#body {
+  width: 100%;
+  height: 100%;
 }
+
 #wrap {
   width: 100%;
   height: 100%;
-  background: url("./img/bg_main.jpg");
+  margin: 0 auto;
 }
 
 header {
@@ -30,21 +31,21 @@ header {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding-top: 50px;
-  width: 100%;
-  height: 100px;
+  width: 1920px;
+  height: 120px;
+  margin: 0 auto;
   gap: 55%;
 }
 header h1 {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   width: 300px;
   height: auto;
 }
 header h1 span {
   display: inline-block;
-  padding-bottom: 5px;
+  padding-top: 8px;
 }
 header h1 span i {
   color: #d35583;
@@ -55,9 +56,8 @@ header h1 span i {
   height: 50px;
 }
 header h1 a {
-  color: #222;
-  font-size: 45px;
-  font-family: "BRBA_B";
+  font-size: 50px;
+  font-family: "Roboto_head";
   font-weight: bold;
   display: block;
 }
@@ -66,19 +66,19 @@ header .btn {
   align-items: center;
   justify-content: center;
   height: 100%;
-  gap: 30px;
+  gap: 50px;
   position: relative;
 }
 header .btn a span {
-  color: #222;
-  font-family: "BRBA_B";
-  font-size: 30px;
+  font-family: "Roboto_head";
+  font-size: 22px;
   font-weight: 100;
 }
 
 .container {
+  background: url("./img/bg_main.jpg");
   width: 100%;
-  height: 960px;
+  height: 820px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -86,14 +86,14 @@ header .btn a span {
 .container .frame {
   display: flex;
   align-items: center;
-  justify-content: right;
-  height: 60%;
-  width: 80%;
-  margin: 0 20%;
+  justify-content: left;
+  height: 90%;
+  width: 1500px;
   position: relative;
   border: 10px solid #d35583;
   box-shadow: 0 0 10px #a92f51;
   border-radius: 200px;
+  overflow: hidden;
 }
 .container .frame::before {
   content: "";
@@ -107,7 +107,7 @@ header .btn a span {
 .container .frame .content {
   display: flex;
   float: left;
-  width: 1200px;
+  width: 75%;
   height: 420px;
   padding-right: 70px;
   justify-content: center;
@@ -125,13 +125,13 @@ header .btn a span {
 .container .frame .content .name span {
   color: #222;
   font-size: 60px;
-  font-family: "BRBA_B";
+  font-family: "Roboto_head";
   font-weight: 900;
   font-style: italic;
   cursor: pointer;
   transition: all 0.3s;
   opacity: 0;
-  animation: name 1.5s linear;
+  animation: name 1s linear;
   animation-fill-mode: both;
 }
 .container .frame .content .name span:hover {
@@ -180,7 +180,7 @@ header .btn a span {
   overflow: hidden;
 }
 .container .frame .content .slide ul li a::before {
-  content: "1";
+  content: "";
   width: 100%;
   height: 100%;
   position: absolute;
@@ -195,13 +195,15 @@ header .btn a span {
   opacity: 0.6;
 }
 .container .frame .content .slide ul li a h1 {
+  width: 100%;
   position: absolute;
   left: 50%;
   top: 150%;
   transform: translate(-50%, -50%);
-  font-family: "BRBA_B";
+  text-align: center;
+  font-family: "Roboto";
   font-size: 45px;
-  font-weight: 100;
+  font-weight: 400;
   color: #fff;
   opacity: 0;
   transition: all 0.3s;
@@ -218,4 +220,264 @@ header .btn a span {
      object-fit: cover;
   -o-object-position: 50% 60%;
      object-position: 50% 60%;
+}
+.container .frame .content .slide ul li a #hang {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 28%;
+     object-position: 50% 28%;
+}
+.container .frame .about {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 25%;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 10px;
+}
+.container .frame .about div {
+  width: 100%;
+  animation: side 0.5s linear;
+  animation-fill-mode: both;
+  opacity: 0;
+}
+.container .frame .about div:nth-child(1) {
+  height: 40%;
+  background: #be502b;
+  border-radius: 5% 0 5% 5%;
+  animation-delay: 0.3s;
+}
+.container .frame .about div:nth-child(2) {
+  height: 30%;
+  background: #e4953e;
+  border-radius: 5% 5% 5% 5%;
+  animation-delay: 0.5s;
+}
+.container .frame .about div:nth-child(3) {
+  height: 30%;
+  background: #508023;
+  border-radius: 5% 0 0 5%;
+  animation-delay: 0.7s;
+}
+@keyframes side {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(20px);
+  }
+}
+
+.section01 {
+  background: white;
+  width: 100%;
+  height: 840px;
+}
+.section01 input {
+  display: none;
+}
+.section01 input[id=tab1]:checked ~ .section-menu .first-menu {
+  left: 0;
+}
+.section01 input[id=tab2]:checked ~ .section-menu .first-menu {
+  left: -1830px;
+}
+.section01 .kim {
+  margin: 100px 0 50px 0;
+  text-align: center;
+}
+.section01 .kim h1 {
+  color: #ff5484;
+  font-size: 60px;
+  font-family: "Roboto_head";
+  font-weight: 900;
+  font-style: italic;
+}
+.section01 .section-menu {
+  width: 1800px;
+  height: 520px;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+}
+.section01 .section-menu .first-menu {
+  position: absolute;
+  left: 0;
+  top: 10%;
+  width: 5000px;
+  transition: all 0.5s ease-in;
+}
+.section01 .section-menu .first-menu .birth {
+  background: #be502b;
+}
+.section01 .section-menu .first-menu .personal {
+  background: #eb9598;
+}
+.section01 .section-menu .first-menu .style {
+  background: #dc9c5e;
+}
+.section01 .section-menu .first-menu .a {
+  background: url("https://img.freepik.com/premium-vector/constellation-scorpio-on-starry-night-background_158677-338.jpg") center/cover no-repeat;
+}
+.section01 .section-menu .first-menu .b {
+  background: url("./img/board.jpg") 50% 60%/cover no-repeat;
+}
+.section01 .section-menu .first-menu .c {
+  background: url("./img/rachel-moenning-zjxYwd4HOu0-unsplash.jpg") 50% 70%/cover no-repeat;
+}
+.section01 .section-menu .first-menu div {
+  display: inline-block;
+  width: 400px;
+  height: 400px;
+  border-radius: 50% 50% 0 0;
+  margin: 0 100px;
+  position: relative;
+}
+.section01 .section-menu .first-menu div h1 {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: "Roboto_head";
+  font-size: 45px;
+  color: #fff;
+  font-style: italic;
+}
+.section01 .section-menu .first-menu div p {
+  display: inline-block;
+  width: 400px;
+  margin-top: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: "Roboto";
+  font-size: 25px;
+  text-align: center;
+}
+.section01 .section-menu .first-menu div p span {
+  font-family: "Roboto";
+  font-size: 35px;
+}
+.section01 .section-menu .first-menu div p .daytext {
+  position: absolute;
+  left: 28%;
+  top: -20%;
+  animation: daytext 3s ease-out infinite;
+  animation-delay: 0.1s;
+}
+@keyframes daytext {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.3);
+  }
+}
+.section01 .section-menu .first-menu div p .personaltext {
+  position: absolute;
+  left: 35%;
+  top: -20%;
+  animation: personaltext 3s linear infinite;
+  animation-delay: 0.2s;
+}
+@keyframes personaltext {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.3);
+  }
+}
+.section01 .section-menu .first-menu div p .styletext {
+  position: absolute;
+  left: 35%;
+  top: -20%;
+  animation: daytext 3s linear infinite;
+  animation-delay: 0.3s;
+}
+@keyframes daytext {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.3);
+  }
+}
+.section01 .buttons {
+  width: 500px;
+  height: 200px;
+  text-align: center;
+  line-height: 200px;
+  margin: 0 auto;
+}
+.section01 .buttons label {
+  margin: 0 5px;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  background: #ff5484;
+  cursor: pointer;
+}
+
+.section02 {
+  background: #ffe4ea;
+  width: 100%;
+  height: 1000px;
+}
+.section02 .yi {
+  padding: 100px 0 50px 0;
+  text-align: center;
+}
+.section02 .yi h1 {
+  color: #ff5484;
+  font-size: 60px;
+  font-family: "Roboto_head";
+  font-weight: 900;
+  font-style: italic;
+}
+.section02 .section-inner {
+  border: 1px solid red;
+  width: 1500px;
+  height: 60%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.section02 .section-inner .hobby {
+  width: 300px;
+  height: 460px;
+  background: #f8d77a;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+}
+.section02 .section-inner .hobby img {
+  width: 200px;
+  float: right;
+  position: absolute;
+  bottom: 10%;
+  right: 5%;
+}
+.section02 .section-inner .hobby-inner {
+  border: 1px solid red;
+  width: 800px;
+  height: 500px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.section02 .section-inner .hobby-inner div {
+  width: 300px;
+  height: 200px;
+  background: #fff;
+  border-radius: 10px;
 }/*# sourceMappingURL=style.css.map */
